2007-12-29  Jan Michael Alonzo  <jmalonzo@unpluggable.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16669
        autotools update and fixes


Canonical link: https://commits.webkit.org/22872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29033 268f45cc-cd09-0410-ab3c-d52691b4dbfc