WebCore/storage/Database.h
@@ -29,8 +29,6 @@
 #ifndef Database_h
 #define Database_h
 
-#if ENABLE(DATABASE)
-
 #include "PlatformString.h"
 #include "SecurityOrigin.h"
 #include "SQLiteDatabase.h"
@@ -156,7 +154,5 @@ private:
 };
 
 } // namespace WebCore
-
-#endif
 
 #endif // Database_h
